# desktopwork

./: .gitignore  DEVICE-TEST-CHECKLIST.md  OPENCLAW_COMMIT  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml
SPECS/: desktop-agent-design.md  desktopwork-design.md  module-extraction-decision.md
desktop-agent/: debug-agent.ts  debug-agent2.ts  debug-agent3.ts  debug-stream.ts  mini-test.mjs  mini-test2.mjs  mini-test3.mjs  package-lock.json  package.json  pnpm-lock.yaml  test-api-key.ts  test-eventstream.ts  test-eventstream2.ts  test-eventstream3.ts  test-eventstream4.ts  test-stream-fn.ts  tsconfig.json
desktop-agent/apps/_shared/: agent.js  auth.js  config.js  markdown.entry.js  styles.css
desktop-agent/apps/auth/: login.html
desktop-agent/apps/chat/: index.html
desktop-agent/apps/dashboard/: index.html
desktop-agent/scripts/: build-markdown-bundle.js  ensure-node.sh
desktop-agent/src/: agent.ts  auth.ts  config.ts  index.ts  ipc.ts  llm.ts  router.ts  session.ts  skills.ts  types.ts  vendor.d.ts
desktop-agent/src/ai/: types.ts  (+3 more)
desktop-agent/test/: smoke.mjs
docs/product/: PRD-DESKTOPWORK.md
docs/technical/: TECH-DESIGN.md  TECH-DESIGN.md.v0.1.bak-2026-06-12
scripts/: extract-openclaw.mjs  require-shim.mjs
shell/: package.json
shell/src-tauri/: Cargo.toml  tauri.conf.json
shell/src-tauri/capabilities/: default.json
shell/src-tauri/src/: lib.rs  main.rs
src-tauri/: package-lock.json  tsconfig.json  vite.config.ts
src-tauri/App/: App.css  App.tsx
src-tauri/src-tauri/: Cargo.toml  tauri.conf.json
(+18 files in other folders)
