[package]
name = "desktopwork"
version = "0.1.0"
description = "DesktopWork Tauri Shell"
authors = ["Ben"]
edition = "2021"

[lib]
name = "desktopwork_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "rt-multi-thread", "time"] }

log = "0.4"
env_logger = "0.11"
url = "2"
urlencoding = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
